--- a/indoshipping.css
+++ b/indoshipping.css
@@ -30,4 +30,8 @@ margin:0 auto;
 td.wpsc_shipping_quote_name, td.wpsc_shipping_quote_price, td.wpsc_shipping_quote_radio{
 display:none;
 }
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
